# pybundle

./: .envrc  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  publish_testpypi.yml
pybundle/: cli.py  context.py  doctor.py  filters.py  manifest.py  packaging.py  policy.py  profiles.py  roadmap_model.py  roadmap_scan.py  root_detect.py  runner.py  tools.py
pybundle/steps/: base.py  compileall.py  context_expand.py  copy_pack.py  error_refs.py  handoff_md.py  mypy.py  pytest.py  repro_md.py  rg_scans.py  roadmap.py  ruff.py  shell.py  tree.py
src/pybundle/: roadmap_scan.py.rej
