[project.scripts]
pybundle = "pybundle.cli:main"

[project]
name = "gwc-pybundle"
description = "Deterministic Python project context bundling for humans, automation, and AI"
readme = "README.md"
license = { file = "LICENSE.md" }
version = "0.4.3"
requires-python = ">=3.9"

authors = [
  { name = "Jessica Brown" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/girls-whocode/pybundle"
Repository = "https://github.com/girls-whocode/pybundle"
Issues = "https://github.com/girls-whocode/pybundle/issues"

[tool.setuptools.packages.find]
include = ["pybundle*"]
exclude = ["artifacts*", ".pybundle*"]

[tool.setuptools]
include-package-data = false
